# Penartic

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Trunk.toml  index.html
.github/workflows/: deploy-pages.yml
src/: app.rs  crash.rs  device.rs  fonts.rs  gcode.rs  lib.rs  main.rs  preview_shader.wgsl  svg_toolpath.rs  validation.rs  viewer.rs
src/gui/: app.rs  fonts.rs  layout.rs  mod.rs  preview_shader.wgsl  viewer.rs
src/paths/: ir.rs  mod.rs  stroke_processing.rs  svg_parser.rs
src/platform/: device.rs  mod.rs
src/platform/device/: esp3d.rs  mod.rs  octoprint.rs  serial.rs
src/plot/: gcode.rs  mod.rs  model.rs
src/res/: colors.rs  mod.rs
src/res/lang/: english.rs  korean.rs  mod.rs
src/svg/: ir.rs  mod.rs  toolpath.rs
