[package]
name = "penartic"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[lib]
name = "penartic_app"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
eframe = { version = "0.34.2", features = ["wgpu", "persistence"] }
glam = "0.32.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = "0.4.29"
poll-promise = { version = "0.3.0", features = ["web"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
usvg = "0.47.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serialport = "4.9.0"
tungstenite = "0.28.0"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.82"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
